<resources>
    <string name="app_name">4Payments</string>
    <string name="pay4u">Pay4u</string>
    <string name="sub_adquirente">Sub Adquirente</string>
    <string name="toque_para_iniciar">Toque para iniciar</string>
    <string name="bandeiras">bandeiras</string>
    <string name="barras">barras</string>
    <string name="_3f">3F</string>
    <string name="r_3_50">R$ 3,50</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_00">00</string>
    <string name="_9">9</string>
    <string name="_apagar"><![CDATA[<]]></string>
    <string name="_0">0</string>
    <string name="_cancelar">Cancelar</string>
    <string name="_confirmar">Confirmar</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="digite_o_valor">Digite o valor</string>
    <string name="_0_00">0,00</string>
    <string name="r">R$</string>
    <string name="_11">1</string>
    <string name="_22">2</string>
    <string name="_33">3</string>
    <string name="_44">4</string>
    <string name="_55">5</string>
    <string name="_66">6</string>
    <string name="_77">7</string>
    <string name="_88">8</string>
    <string name="_99">9</string>
    <string name="_virg">,</string>
    <string name="_000">0</string>
    <string name="apagar"><![CDATA[<]]></string>
    <string name="cancelar">Cancelar</string>
    <string name="proximo">Proximo</string>
    <string name="logo">logo</string>
    <string name="plus4u">Plus4u</string>
    <string name="senha">****</string>
    <string name="_0000">0</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>